--- a/templates/page1.html
+++ b/templates/page1.html
@@ -65,6 +65,7 @@
 
 <script src="{{ url_for('static', filename='script_wheel.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 
 {% include '_nav.html' %}
 
