--- a/templates/page2.html
+++ b/templates/page2.html
@@ -21,8 +21,9 @@
     <img src="/static/images/friends_5.png" width="320">
 </div>
 
-
+    <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 {% include '_nav.html' %}
 </body>
 </html>
