--- a/templates/page3.html
+++ b/templates/page3.html
@@ -13,7 +13,7 @@
     <a href="/page3" class="item">
         <img src="/static/images/button_menu.png" alt="Image 1" class="image">
     </a>
-    <a href="/page6" class="item">
+    <a href="/boss1" class="item">
         <img src="/static/images/button_menu_2.png" alt="Image 2" class="image">
     </a>
     <a href="/page7" class="item">
@@ -30,6 +30,7 @@
 
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 {% include '_nav.html' %}
 </body>
 </html>
