--- a/templates/page5.html
+++ b/templates/page5.html
@@ -18,6 +18,7 @@
 <p class="text_3">1 место - ЖмыхБобр228</p>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+      <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
     {% include '_nav.html' %}
 </body>
 </html>
