--- a/templates/page4.html
+++ b/templates/page4.html
@@ -12,6 +12,7 @@
     </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
     {% include '_nav.html' %}
 </body>
 </html>
