--- a/templates/page6.html
+++ b/templates/page6.html
@@ -33,6 +33,7 @@
 
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 {% include '_nav.html' %}
 </body>
 </html>
