--- a/templates/page8.html
+++ b/templates/page8.html
@@ -18,6 +18,7 @@
 
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+      <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
     {% include '_nav.html' %}
 </body>
 </html>
