page3 is better

--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,6 @@ body {
     display: flex;
     height: 90vh;
     flex-direction: column;
-
     background-image: url("/static/images/brawl_stars_lobby.png"); /* Укажите путь к вашему изображению */
     background-size: cover; /* Растянуть изображение на весь контейнер */
     background-position: center; /* Центровка изображения */
@@ -435,31 +434,314 @@ text-align: center; /* Центрирование изображения */
 
 .box_1 {
     position: fixed; /* Фиксированное позиционирование */
+    top: 50px; /* Расположение по вертикали */
+    left: 20px; /* Расположение по горизонтали */
+    z-index: 1000; /* Уровень наложения */
+}
+.box1 {
+    float: left; /* Изображение будет слева */
+    margin-right: 10px; /* Отступ между изображением и текстом */
+}
+
+.text_box1 {
+    display: inline-block; /* Позволяет тексту выравниваться рядом с изображением */
+    vertical-align: middle; /* Вертикальное выравнивание текста по центру */
+    font-size: 24px; /* Установите желаемый размер шрифта */
+    font-weight: bold; /* Сделать текст жирным (по желанию) */
+    color: white; /* Цвет текста (по желанию) */
+}
+
+.text_box11 {
+    display: block; /* Отображение в блоке, чтобы текст был на новой строке */
+    font-size: 14px; /* Установите желаемый размер шрифта для маленького текста */
+    color: white; /* Цвет текста (по желанию) */
+    margin-top: 5px; /* Отступ сверху для разделения от основного текста */
+}
+
+.box_2 {
+    position: fixed; /* Фиксированное позиционирование */
     top: 150px; /* Расположение по вертикали */
-    left: 100px; /* Расположение по горизонтали */
+    left: 20px; /* Расположение по горизонтали */
+    z-index: 1000; /* Уровень наложения */
+}
+.box2 {
+    float: left; /* Изображение будет слева */
+    margin-right: 10px; /* Отступ между изображением и текстом */
+}
+.text_box2 {
+    display: inline-block; /* Позволяет тексту выравниваться рядом с изображением */
+    vertical-align: middle; /* Вертикальное выравнивание текста по центру */
+    font-size: 24px; /* Установите желаемый размер шрифта */
+    font-weight: bold; /* Сделать текст жирным (по желанию) */
+    color: white; /* Цвет текста (по желанию) */
+}
+.text_box22 {
+    display: block; /* Отображение в блоке, чтобы текст был на новой строке */
+    font-size: 14px; /* Установите желаемый размер шрифта для маленького текста */
+    color: white; /* Цвет текста (по желанию) */
+    margin-top: 5px; /* Отступ сверху для разделения от основного текста */
+}
+
+.box_3 {
+    position: fixed; /* Фиксированное позиционирование */
+    top: 250px; /* Расположение по вертикали */
+    left: 20px; /* Расположение по горизонтали */
     z-index: 1000; /* Уровень наложения */
 
 }
+.box3 {
+    float: left; /* Изображение будет слева */
+    margin-right: 10px; /* Отступ между изображением и текстом */
+}
 
-.container {
+.text_box3 {
+    display: inline-block; /* Позволяет тексту выравниваться рядом с изображением */
+    vertical-align: middle; /* Вертикальное выравнивание текста по центру */
+    font-size: 24px; /* Установите желаемый размер шрифта */
+    font-weight: bold; /* Сделать текст жирным (по желанию) */
+    color: white; /* Цвет текста (по желанию) */
+}
+.text_box33 {
+    display: block; /* Отображение в блоке, чтобы текст был на новой строке */
+    font-size: 14px; /* Установите желаемый размер шрифта для маленького текста */
+    color: white; /* Цвет текста (по желанию) */
+    margin-top: 5px; /* Отступ сверху для разделения от основного текста */
+}
+
+.box_4 {
     position: fixed; /* Фиксированное позиционирование */
-    bottom: 100px; /* Привязка к нижнему краю экрана */
+    top: 350px; /* Расположение по вертикали */
+    left: 20px; /* Расположение по горизонтали */
+    z-index: 1000; /* Уровень наложения */
+}
+.box4 {
+    float: left; /* Изображение будет слева */
+    margin-right: 10px; /* Отступ между изображением и текстом */
+}
+.text_box4 {
+    display: inline-block; /* Позволяет тексту выравниваться рядом с изображением */
+    vertical-align: middle; /* Вертикальное выравнивание текста по центру */
+    font-size: 24px; /* Установите желаемый размер шрифта */
+    font-weight: bold; /* Сделать текст жирным (по желанию) */
+    color: white; /* Цвет текста (по желанию) */
+}
+.text_box44 {
+    display: block; /* Отображение в блоке, чтобы текст был на новой строке */
+    font-size: 14px; /* Установите желаемый размер шрифта для маленького текста */
+    color: white; /* Цвет текста (по желанию) */
+    margin-top: 5px; /* Отступ сверху для разделения от основного текста */
+}
+
+
+.menu_p3 {
+    position: fixed; /* Фиксированное позиционирование */
+    bottom: 70px; /* Увеличиваем значение, чтобы сместить элемент вниз */
     left: 50%; /* Центрируем по горизонтали */
     transform: translateX(-50%); /* Сдвигаем на половину ширины контейнера для центрирования */
     display: flex; /* Используем flexbox для расположения изображений */
     gap: 10px; /* Расстояние между картинками */
 }
 
-.image {
-    max-width: 120px; /* Максимальная ширина картинок */
+
+.image-container {
+    display: flex; /* Используем flexbox для центрирования */
+    justify-content: center; /* Центрируем по горизонтали */
+    margin-top: 20px; /* Отступ сверху */
+}
+
+#mainImage {
+    width: 500px; /* Ширина основного изображения */
     height: auto; /* Автоматическая высота для сохранения пропорций */
 }
 
-/* Страница Квесты */
 
+.fixed-window {
+    position: fixed;
+    bottom: 200px; /* Позиция внизу экрана, поднято на 20 пикселей */
+    left: 50%; /* Центрирование по горизонтали */
+    transform: translateX(-50%); /* Центрирование по горизонтали */
+    background-color: #3E5F8A; /* Темно-синий цвет */
+    color: white; /* Цвет текста */
+    padding: 20px; /* Отступы внутри окна */
+    border-radius: 10px; /* Закругленные углы */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Тень для эффекта поднятости */
+    width: 300px; /* Ширина окна */
+    height: 300px; /* Высота окна */
+}
+
+.left-icon {
+    align-self: flex-start; /* Выравнивание по левому краю */
+}
+
+.center-icon {
+    align-self: center; /* Центрирование по горизонтали */
+}
+
+.right-icon {
+    align-self: flex-end; /* Выравнивание по правому краю */
+}
+
+.icon_nita {
+    width: 85px; /* Ширина иконок (можете изменить) */
+    height: auto; /* Автоматическая высота для сохранения пропорций */
+    margin: 5px; /* Отступы между иконками */
+}весты */
+.header {
+    text-align: center; /* Центрирование текста */
+    margin-top: 20px; /* Отступ сверху */
+}
+
+/* Страница квесты */
+.content-container {
+            position: relative; /* Для абсолютного позиционирования текста */
+            text-align: center; /* Центрируем содержимое по горизонтали */
+            margin-top: 50px; /* Отступ сверху для смещения содержимого вниз */
+        }
+
+        .quests_text {
+            margin-top: 20px; /* Отступ сверху для смещения текста вниз */
+        }
+
+        .quests_text h1 {
+            color: white; /* Устанавливаем цвет текста белым */
+            font-size: 2em; /* Размер шрифта (можете изменить по желанию) */
+        }
+
+        .image-container {
+            margin-top: 20px; /* Отступ сверху для изображения */
+        }
+
+        .image-container img {
+            width: 100%; /* Автоматическая ширина для адаптивности (можно изменить) */
+            max-width: 600px; /* Максимальная ширина изображения */
+            height: auto; /* Автоматическая высота для сохранения пропорций */
+        }
+
+        .overlay-text {
+            position: absolute; /* Абсолютное позиционирование текста */
+            top: 20%; /* Центрируем по вертикали */
+            left: 50%; /* Центрируем по горизонтали */
+            transform: translate(-50%, -50%); /* Сдвигаем текст на половину его ширины и высоты для центрирования */
+            color: white; /* Цвет текста белый */
+            font-size: 2em; /* Размер шрифта (можете изменить) */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Тень для улучшения читаемости текста на изображении */
+        }
+.content-container_2 {
+            position: relative; /* Для абсолютного позиционирования текста */
+            text-align: center; /* Центрируем содержимое по горизонтали */
+            margin-top: 150px; /* Отступ сверху для смещения содержимого вниз */
+        }
+
+        .quests_text_2 {
+            margin-top: 20px; /* Отступ сверху для смещения текста вниз */
+        }
+
+        .quests_text_2 h1 {
+            color: white; /* Устанавливаем цвет текста белым */
+            font-size: 2em; /* Размер шрифта (можете изменить по желанию) */
+        }
+
+        .image-container_2 {
+            margin-top: 20px; /* Отступ сверху для изображения */
+        }
+
+        .image-container_2 img {
+            width: 100%; /* Автоматическая ширина для адаптивности (можно изменить) */
+            max-width: 600px; /* Максимальная ширина изображения */
+            height: auto; /* Автоматическая высота для сохранения пропорций */
+        }
+
+        .overlay-text_2 {
+            position: absolute; /* Абсолютное позиционирование текста */
+            top: 50%; /* Центрируем по вертикали */
+            left: 50%; /* Центрируем по горизонтали */
+            transform: translate(-50%, -50%); /* Сдвигаем текст на половину его ширины и высоты для центрирования */
+            color: white; /* Цвет текста белый */
+            font-size: 2em; /* Размер шрифта (можете изменить) */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Тень для улучшения читаемости текста на изображении */
+        }
 /* Страница топ */
+/* Страница скины */
 
 
+.menu_2 {
+    display: flex;
+    justify-content: center; /* Центрирование по горизонтали */
+    position: absolute; /* Позволяет позиционировать меню */
+    bottom: 600px; /* Отступ от нижней части экрана */
+    width: 80%; /* Уменьшение ширины до 80% от ширины экрана */
+    max-width: 600px; /* Максимальная ширина меню */
+    height: 50px; /* Установка фиксированной высоты */
+    padding: 10px; /* Отступы внутри меню */
+    background-color: rgba(255, 255, 255, 0.8); /* Полупрозрачный фон (по желанию) */
+    border-radius: 10px; /* Закругленные углы (по желанию) */
+}
+
+.menu_2-item {
+    background-color: rgba(255, 255, 255, 0.8); /* Полупрозрачный фон для элементов меню */
+    border-radius: 5px; /* Скругление углов */
+    padding: 10px 20px; /* Отступы внутри элементов меню */
+    margin: 0 15px; /* Увеличенные отступы между элементами меню */
+    text-align: center; /* Центрирование текста */
+    cursor: pointer; /* Указатель мыши при наведении */
+    transition: background-color 0.3s; /* Плавный переход фона при наведении */
+}
+
+.menu_3 {
+    display: flex; /* Используем flexbox для горизонтального расположения */
+    justify-content: center; /* Центрирование по горизонтали */
+    position: absolute; /* Позволяет позиционировать меню */
+    bottom: 800px; /* Отступ от нижней части экрана */
+    width: 100%; /* Ширина меню на весь экран */
+}
+.menu-item_3 {
+    background-color: rgba(255, 255, 255, 0.8); /* Полупрозрачный фон для элементов меню */
+    border-radius: 5px; /* Скругление углов */
+    padding: 10px 20px; /* Отступы внутри элементов меню */
+    margin: 0 15px; /* Увеличенные отступы между элементами меню */
+    text-align: center; /* Центрирование текста */
+    cursor: pointer; /* Указатель мыши при наведении */
+    transition: background-color 0.3s; /* Плавный переход фона при наведении */
+}
+
+.menu-icon_3 {
+    display: block; /* Отображение изображения как блочного элемента */
+    margin: 0 auto 5px; /* Центрирование изображения и отступ снизу */
+    width: 40px; /* Ширина изображения */
+    height: auto; /* Автоматическая высота для сохранения пропорций */
+}
+
+.menu-item_3:hover {
+    background-color: rgba(255, 255, 0, 0.8); /* Изменение фона при наведении */
+}
+
+.menu_4 {
+    display: flex; /* Используем flexbox для горизонтального расположения */
+    justify-content: center; /* Центрирование по горизонтали */
+    position: absolute; /* Позволяет позиционировать меню */
+    bottom: 600px; /* Отступ от нижней части экрана */
+    width: 100%; /* Ширина меню на весь экран */
+}
+.menu-item_4 {
+    background-color: rgba(255, 255, 255, 0.8); /* Полупрозрачный фон для элементов меню */
+    border-radius: 5px; /* Скругление углов */
+    padding: 10px 20px; /* Отступы внутри элементов меню */
+    margin: 0 15px; /* Увеличенные отступы между элементами меню */
+    text-align: center; /* Центрирование текста */
+    cursor: pointer; /* Указатель мыши при наведении */
+    transition: background-color 0.3s; /* Плавный переход фона при наведении */
+}
+
+.menu-icon_4 {
+    display: block; /* Отображение изображения как блочного элемента */
+    margin: 0 auto 5px; /* Центрирование изображения и отступ снизу */
+    width: 40px; /* Ширина изображения */
+    height: auto; /* Автоматическая высота для сохранения пропорций */
+}
+
+.menu-item_4:hover {
+    background-color: rgba(255, 255, 0, 0.8); /* Изменение фона при наведении */
+}
 
 /* Босс1*/
 /* Стили для очков и таймера */
