--- a/templates/page3.html
+++ b/templates/page3.html
@@ -9,24 +9,47 @@
 </head>
 <body>
 
-<div class="container">
+<div class="menu_p3">
     <a href="/page3" class="item">
-        <img src="/static/images/button_menu.png" alt="Image 1" class="image">
+        <img src="/static/images/button_menu.png" width="100" alt="Image 1" class="image">
     </a>
-    <a href="/boss1" class="item">
-        <img src="/static/images/button_menu_2.png" alt="Image 2" class="image">
+    <a href="/page6" class="item">
+        <img src="/static/images/button_menu_2.png" width="100" alt="Image 2" class="image">
     </a>
     <a href="/page7" class="item">
-        <img src="/static/images/button_menu_3.png" alt="Image 3" class="image">
+        <img src="/static/images/button_menu_3.png" width="100" alt="Image 3" class="image">
     </a>
 </div>
-
 
 
 <div class="box_1">
-    <img src="/static/images/box_1.png" width="180">
+    <img src="/static/images/box_1.png" width="80" class="box1">
+    <span class="text_box1">Мегаящик</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box11">здесь вы можете выбить нового персонажа</span>
 </div>
 
+
+<div class="box_2">
+    <img src="/static/images/box_2.png" width="80" class="box2">
+    <span class="text_box2">Суперящик</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box22">здесь вы можете выбить нового персонажа</span>
+</div>
+
+<div class="box_3">
+    <img src="/static/images/box_3.png" width="80" class="box3">
+    <span class="text_box3">Ультраящик</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box33">здесь вы можете выбить нового персонажа</span>
+</div>
+
+<div class="box_4">
+    <img src="/static/images/box_4.png" width="80" class="box4">
+    <span class="text_box4">Омегаящик</span>
+    <br> <!-- Перенос строки для разделения основного и дополнительного текста -->
+     <span class="text_box44">здесь вы можете выбить нового персонажа</span>
+</div>
 
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
